Добавлены тестовые ресурсы, два файла: application.properties и data.sql.,